refactor: testFixture 메서드명 변경